Shrink button display to prevent wrapping on small devices

--- a/src/assets/stylesheets/_mixins.scss
+++ b/src/assets/stylesheets/_mixins.scss
@@ -19,6 +19,7 @@
 }
 
 @mixin reset-button() {
+	margin: 0;
 	padding: 0;
 	background: none;
 	border: none;
